chenged nlog config

--- a/CompanyApp/nlog.config
+++ b/CompanyApp/nlog.config
@@ -3,7 +3,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   autoReload="true"
   internalLogLevel="Trace"
-  internalLogFile="C:\Users\varets\source\repos\CompanyApp\Logfile\internal_logs\internallog.txt">
+  internalLogFile="C:\Users\varets\source\repos\CompanyApp\Logfile\internal_logs\internallog.log">
 
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
