Added EntityFramework Created repositories model and migrated data to database

--- a/CompanyApp/appsettings.json
+++ b/CompanyApp/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Server=RIT-W14\\LOCALDB;Database=CompanyApp;Persist Security Info=True;User ID=SA;Password=qwerty123;MultipleActiveResultSets=True;"
+  },
+
   "AllowedHosts": "*"
 }
 
