Added: Updating Employee Updating Company and add employee

--- a/CompanyApp/nlog.config
+++ b/CompanyApp/nlog.config
@@ -23,9 +23,11 @@
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
     <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web" final="true" />
-    <logger name="Microsoft.*" maxlevel="Info" final="true" />
+    <logger name="Microsoft.EntityFrameworkCore" maxlevel="off" writeTo="lifetimeConsole" final="true" />
+    <logger name="Microsoft.*" maxlevel="Debug" final="true" /> <!-- see query request -->
     <logger name="System.Net.Http.*" maxlevel="Info" final="true" />
     <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
     <logger name="*" minlevel="Trace" writeTo="lifetimeConsole" />
+    
   </rules>
 </nlog>
