--- a/CompanyApp/appsettings.json
+++ b/CompanyApp/appsettings.json
@@ -2,9 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.EntityFrameworkCore": "Information"
-
     }
   },
   "ConnectionStrings": {
