--- a/WepApi/appsettings.json
+++ b/WepApi/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=RIT-W14\\LOCALDB;Database=CompanyApp;Persist Security Info=True;User ID=SA;Password=qwerty123;MultipleActiveResultSets=True;"
+    "sqlConnection": "Server=DESKTOP-0K2DTOA;Database=CompanyApp;Persist Security Info=True;User ID=SA;Password=qwerty123;MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
