--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Employees\Commands\DeleteEmployee\" />
+  </ItemGroup>
+
 </Project>
